[tool.poetry]
name = "homeworkk"
version = "0.1.0"
description = ""
authors = ["Aldar <dondokovab@mer.ci.nsu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line_length = 119
exclude = 'venv'

[tool.isort]
line_length = 119

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
